--- a/trunk/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
+++ b/trunk/src/Ragade'sCubeWin/Ragade'sCubeWin/Ragade'sCubeWin.csproj
@@ -147,6 +147,14 @@
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>FlatSpatial</Name>
     </Compile>
+    <Compile Include="GUI\Fonts\BitmapFont.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>BitmapFont</Name>
+    </Compile>
+    <Compile Include="GUI\Fonts\FontManager.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>FontManager</Name>
+    </Compile>
     <Compile Include="GUI\GUIEvent.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>GUIEvent</Name>
@@ -162,6 +170,10 @@
     <Compile Include="GUI\Primitives\Quad.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
       <Name>Quad</Name>
+    </Compile>
+    <Compile Include="GUI\Primitives\Text.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>Text</Name>
     </Compile>
     <Compile Include="GUI\TemporaryAttributes.cs">
       <XNAUseContentPipeline>false</XNAUseContentPipeline>
@@ -350,6 +362,72 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Fonts\Lucida Console\font-0.png">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>TextureImporter</Importer>
+      <Processor>SpriteTextureProcessor</Processor>
+      <Name>font-0</Name>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Fonts\Lucida Console\font.xml">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>font</Name>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Fonts\Rockwell Extra Bold -48pt\font-0.png">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>TextureImporter</Importer>
+      <Processor>SpriteTextureProcessor</Processor>
+      <Name>font-0</Name>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Fonts\Rockwell Extra Bold -48pt\font-1.png">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>TextureImporter</Importer>
+      <Processor>SpriteTextureProcessor</Processor>
+      <Name>font-1</Name>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Fonts\Rockwell Extra Bold -48pt\font-2.png">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>TextureImporter</Importer>
+      <Processor>SpriteTextureProcessor</Processor>
+      <Name>font-2</Name>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Fonts\Rockwell Extra Bold -48pt\font-3.png">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>TextureImporter</Importer>
+      <Processor>SpriteTextureProcessor</Processor>
+      <Name>font-3</Name>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Fonts\Rockwell Extra Bold -48pt\font-4.png">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>TextureImporter</Importer>
+      <Processor>SpriteTextureProcessor</Processor>
+      <Name>font-4</Name>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Fonts\Rockwell Extra Bold -48pt\font-5.png">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>TextureImporter</Importer>
+      <Processor>SpriteTextureProcessor</Processor>
+      <Name>font-5</Name>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Fonts\Rockwell Extra Bold -48pt\font-6.png">
+      <XNAUseContentPipeline>true</XNAUseContentPipeline>
+      <Importer>TextureImporter</Importer>
+      <Processor>SpriteTextureProcessor</Processor>
+      <Name>font-6</Name>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Fonts\Rockwell Extra Bold -48pt\font.xml">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>font</Name>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Models\Facelet.x">
       <XNAUseContentPipeline>true</XNAUseContentPipeline>
       <Importer>XImporter</Importer>
@@ -368,6 +446,9 @@
       <Processor>SpriteTextureProcessor</Processor>
       <Name>UpgradeChrisBackground</Name>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Core\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA\Game Studio Express\v1.0\Microsoft.Xna.ContentPipeline.targets" />
