--- a/trunk/src/RC.Gui/RC.Gui/RC.Gui.csproj
+++ b/trunk/src/RC.Gui/RC.Gui/RC.Gui.csproj
@@ -58,9 +58,110 @@
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\Control Subclasses\RCButton.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RCButton</Name>
+    </Compile>
+    <Compile Include="Controls\Control Subclasses\RCCheckBox.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RCCheckBox</Name>
+    </Compile>
+    <Compile Include="Controls\Control Subclasses\RCImage.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RCImage</Name>
+    </Compile>
+    <Compile Include="Controls\Control Subclasses\RCLabel.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RCLabel</Name>
+    </Compile>
+    <Compile Include="Controls\Control Subclasses\RCRadioButton.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RCRadioButton</Name>
+    </Compile>
+    <Compile Include="Controls\Control Subclasses\RCSpinner.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RCSpinner</Name>
+    </Compile>
+    <Compile Include="Controls\Control Subclasses\RCTextBox.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RCTextBox</Name>
+    </Compile>
+    <Compile Include="Controls\Control Subclasses\TestControl.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>TestControl</Name>
+    </Compile>
+    <Compile Include="Controls\RCControl.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RCControl</Name>
+    </Compile>
+    <Compile Include="Controls\RCControlGroup.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RCControlGroup</Name>
+    </Compile>
+    <Compile Include="Controls\RCControlManager.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RCControlManager</Name>
+    </Compile>
+    <Compile Include="Controls\RCControl_Enumerations.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RCControl_Enumerations</Name>
+    </Compile>
+    <Compile Include="Controls\RCRadioChannel.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RCRadioChannel</Name>
+    </Compile>
+    <Compile Include="FlatSpatial.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>FlatSpatial</Name>
+    </Compile>
+    <Compile Include="Fonts\BitmapFont.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>BitmapFont</Name>
+    </Compile>
+    <Compile Include="Fonts\FontManager.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>FontManager</Name>
+    </Compile>
+    <Compile Include="GUIEvent.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>GUIEvent</Name>
+    </Compile>
+    <Compile Include="GuiInputScheme.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>GuiInputScheme</Name>
+    </Compile>
+    <Compile Include="IGUIElement.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>IGUIElement</Name>
+    </Compile>
+    <Compile Include="Panes\RCPane.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RCPane</Name>
+    </Compile>
+    <Compile Include="Primitives\Quad.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>Quad</Name>
+    </Compile>
+    <Compile Include="Primitives\Text.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>Text</Name>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RCUIManager.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>RCUIManager</Name>
+    </Compile>
+    <Compile Include="ScreenScene.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>ScreenScene</Name>
+    </Compile>
+    <Compile Include="TemporaryAttributes.cs">
+      <XNAUseContentPipeline>false</XNAUseContentPipeline>
+      <Name>TemporaryAttributes</Name>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA\Game Studio Express\v1.0\Microsoft.Xna.ContentPipeline.targets" />
